# ProjectMu

./: README.md  build.sh  cli.py  gui.py  mu.cpp  mu.g4  mu.py  parser.py  piano.py  pyproject.toml  rational.hpp  tones.py
example/: Amazing Grace.nmn  Bad Apple!!.nmn  Green Sleeves.nmn  Lemon.nmn  Only My Railgun.nmn  Seikilos Epitaph.nmn  Wave.nmn  打上花火.nmn  残酷な天使のテーゼ.nmn  翼をください.nmn  踊子プリムロゼのテーマ.nmn
examples/: Amazing Grace.μ  Bad Apple!!.μ  Green Sleeves.μ  Lemon.μ  No Title long.μ  No Title short.μ  Only My Railgun.μ  Wave.μ  Weight of the World.μ  mu.cpp  打上花火.μ  残酷な天使のテーゼ.μ  翼をください.μ  踊子プリムロゼのテーマ.μ
examples/examples/: Amazing Grace.μ  Bad Apple!!.μ  Green Sleeves.μ  Wave.μ  残酷な天使のテーゼ.μ  踊子プリムロゼのテーマ.μ
src/mu/: ast.py  audio.py  cli.py  converter.py  core.py  parser.py  piano.py  tone.py
